--- a/config/kibana.yml
+++ b/config/kibana.yml
@@ -19,6 +19,7 @@
 
 # The URL of the Elasticsearch instance to use for all your queries.
 #elasticsearch.url: "http://localhost:9200"
+elasticsearch.url:"http:10.10.13.120:9200"
 
 # When this setting's value is true Kibana uses the hostname specified in the server.host
 # setting. When the value of this setting is false, Kibana uses the hostname of the host
@@ -97,3 +98,4 @@
 # Set the interval in milliseconds to sample system and process performance
 # metrics. Minimum is 100ms. Defaults to 5000.
 #ops.interval: 5000
+optimize.unsafeCache: false
