--- a/config/kibana.yml
+++ b/config/kibana.yml
@@ -98,8 +98,9 @@ elasticsearch.url: "http://10.10.13.120:9200"
 # Set the interval in milliseconds to sample system and process performance
 # metrics. Minimum is 100ms. Defaults to 5000.
 #ops.interval: 5000
-optimize.unsafeCache: false
-# optimize.enabled: false
+#optimize.unsafeCache: true
+#optimize.enabled: false
+#optimize.lazyPrebuild: false
 # The default locale. This locale can be used in certain circumstances to substitute any missing
 # translations.
 #i18n.defaultLocale: "en"
