--- a/config/kibana.yml
+++ b/config/kibana.yml
@@ -104,3 +104,7 @@ elasticsearch.url: "http://10.10.13.120:9200"
 # The default locale. This locale can be used in certain circumstances to substitute any missing
 # translations.
 #i18n.defaultLocale: "en"
+optimize:
+  sourceMaps: '#cheap-source-map' # options -> http://webpack.github.io/docs/configuration.html#devtool
+  unsafeCache: true
+  lazyPrebuild: false
